apps/vote-app/base/vote-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  labels:
    app: vote

spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  
  template:
    metadata:
      name: vote
      labels:
        app: vote
    spec:  
      containers:
        - name: vote
          image: dockersamples/examplevotingapp_vote
          ports:
            - containerPort: 80
              name: vote
