apps/vote-app/base/db-service.yml
apiVersion: v1 
kind: Service
metadata:
  name: db
  labels:
    app: db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      name: "db-service"
  selector:
    app: db
