apps/vote-app/base/redis-service.yml
apiVersion: v1 
kind: Service
metadata:
  name: redis
  labels:
    app: redis

spec:
  type: ClusterIP
  selector:
    app: redis

  ports:
    - name: "redis-service"
      port: 6379
      targetPort: 6379
