apps/vote-app/base/result-service.yml
apiVersion: v1 
kind: Service
metadata: 
  name: result-service
  labels:
    app: result
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: "result-service"
  
  selector:
    app: result
