apps/vote-app/base/vote-service.yml
apiVersion: v1 
kind: Service
metadata:
  name: vote-app-service
  labels:
    app: vote

spec:
  type: ClusterIP
  selector:
    app: vote

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: "vote-service"
